@@ -194,15 +194,15 @@ def check_conflicting_args(args, hashtype):
 
 def check_argument_range(low, high, parameter_name):
     """Check if parameter value is in the range `low` to `high`."""
-    def _in_range(x):
-        x = int(x)
-        if not (low <= x < high):
+    def _in_range(value):
+        value = int(value)
+        if not low <= value < high:
             print_error("\n** ERROR: khmer only supports "
                         "%i <= %s < %i.\n" % (low, parameter_name, high))
             sys.exit(1)
 
         else:
-            return x
+            return value
 
     return _in_range
 
