@@ -1,5 +1,14 @@
 2016-09-01  Tim Head  <betatim@gmail.com>
 
+   * khmer/khmer_args.py: added check_argument_range to check an integer
+   command-line argument is within a given range.
+   * scripts/{normalize-by-median.py, filter-abund.py, filter-abund-single.py}
+   now use check_argument_range for the cutoff parameter.
+   * tests/test_normalize_by_median.py: modified
+   test_normalize_by_median_no_bigcount.
+
+2016-09-01  Tim Head  <betatim@gmail.com>
+
    * scripts/filter-abund-single.py: Add support for variable coverage trimming
 
 2016-08-31  Tim Head  <betatim@gmail.com>
